[gd_scene load_steps=4 format=3 uid="uid://gamescene001"]

[ext_resource type="Script" path="res://scripts/GameUI.gd" id="1_gameui"]
[ext_resource type="PackedScene" path="res://scenes/CardNode.tscn" id="2_cardnode"]
[ext_resource type="PackedScene" path="res://scenes/HUD.tscn" id="3_hud"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.13, 0.35, 0.18, 1.0)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 50.0

[node name="PlayerInfo" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player | HP: 100 | Gold: 0 | Lv:1"

[node name="RoundLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 1
horizontal_alignment = 1
text = "Round 1"

[node name="AIInfo" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = "AI | HP: 100 | Gold: 0 | Lv:1"

[node name="BoardArea" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 60.0
offset_right = 900.0
offset_bottom = 500.0

[node name="BackLabel" type="Label" parent="BoardArea"]
layout_mode = 2
text = "BACK (5칸)"

[node name="BackLine" type="HBoxContainer" parent="BoardArea"]
layout_mode = 2
name = "BackLine"
custom_minimum_size = Vector2(0, 130)

[node name="MidLabel" type="Label" parent="BoardArea"]
layout_mode = 2
text = "MID (5칸)"

[node name="MidLine" type="HBoxContainer" parent="BoardArea"]
layout_mode = 2
name = "MidLine"
custom_minimum_size = Vector2(0, 130)

[node name="FrontLabel" type="Label" parent="BoardArea"]
layout_mode = 2
text = "FRONT (3칸)"

[node name="FrontLine" type="HBoxContainer" parent="BoardArea"]
layout_mode = 2
name = "FrontLine"
custom_minimum_size = Vector2(0, 130)

[node name="BenchLabel" type="Label" parent="BoardArea"]
layout_mode = 2
text = "BENCH"

[node name="BenchArea" type="HBoxContainer" parent="BoardArea"]
layout_mode = 2
name = "BenchArea"
custom_minimum_size = Vector2(0, 130)

[node name="RightPanel" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 910.0
offset_top = 60.0
offset_right = 1270.0
offset_bottom = 700.0

[node name="ShopLabel" type="Label" parent="RightPanel"]
layout_mode = 2
text = "상점"

[node name="ShopArea" type="HBoxContainer" parent="RightPanel"]
layout_mode = 2
name = "ShopArea"
custom_minimum_size = Vector2(0, 130)

[node name="ButtonRow" type="HBoxContainer" parent="RightPanel"]
layout_mode = 2

[node name="BuyXPBtn" type="Button" parent="ButtonRow"]
layout_mode = 2
text = "XP구매(4G)"

[node name="RerollBtn" type="Button" parent="ButtonRow"]
layout_mode = 2
text = "리롤(2G)"

[node name="CombatBtn" type="Button" parent="RightPanel"]
layout_mode = 2
text = "전투 시작!"

[node name="EndRoundBtn" type="Button" parent="RightPanel"]
layout_mode = 2
text = "다음 라운드"
visible = false

[node name="CombatLog" type="RichTextLabel" parent="RightPanel"]
layout_mode = 2
size_flags_vertical = 3
text = "게임 시작..."

[node name="HandInfoArea" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 510.0
offset_right = 900.0
offset_bottom = 700.0

[node name="HandInfoLabel" type="Label" parent="HandInfoArea"]
layout_mode = 2
text = "핸드 정보:"

[node name="BackHandLabel" type="Label" parent="HandInfoArea"]
layout_mode = 2
text = "Back: -"

[node name="MidHandLabel" type="Label" parent="HandInfoArea"]
layout_mode = 2
text = "Mid: -"

[node name="FrontHandLabel" type="Label" parent="HandInfoArea"]
layout_mode = 2
text = "Front: -"

[node name="HUD" parent="." instance=ExtResource("3_hud")]
